# srcfind

./: CMakeLists.txt  agctNode.cpp  agctNode.h  agctTree.cpp  agctTree.h  alignInfo.cpp  alignInfo.h  alignManager.cpp  alignManager.h  backgroundGenerator.cpp  backgroundGenerator.h  bamFile.cpp  bamFile.h  basicInfo.cpp  basicInfo.h  bedFile.cpp  bedFile.h  bpDecReg.cpp  bpDecReg.h  bpSolRel.cpp  bpSolRel.h  bpSolRelSet.cpp  comRel.cpp  comRel.h  detectRegion.cpp  detectRegion.h  faFile.cpp  faFile.h  fastqFile.cpp  fastqFile.h  fastqReads.cpp  fastqReads.h  gcSta.cpp  gcSta.h  geneRegion.h  geneRegionFile.cpp  geneRegionFile.h  main.cpp  nanoSpeed.cpp  nanoSpeedBF.cpp  (+15 more)
